--- a/views/default.hbs
+++ b/views/default.hbs
@@ -35,6 +35,10 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <h3 class="lightblue" id="title"></h3>
+                        <h4 class="lightblue" id="desc"></h4>
+                    </li>
                     <div class="userControl">
                         {{#if loggedIn}}
 
