--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,14 @@ main {
     padding-left: 4em !important;
 }
 
+.lightblue {
+    color: #85FFFE;
+}
+
+#title {
+    padding-left: 3em;
+}
+
 /* width */
 
 ::-webkit-scrollbar {
@@ -222,6 +230,7 @@ ul {
 
 #userNotesDropdown {
     z-index: 6;
+    left: 4em;
 }
 
 #DropDownMenu2 {
