--- a/views/default.hbs
+++ b/views/default.hbs
@@ -81,7 +81,6 @@
     <div class="triangle-down"></div>
     {{/if}}
     {{{body}}}
-
     {{#if loggedIn}}
     {{!-- Add modal --}}
     <div class="modal fade" id="myModal" role="dialog">
@@ -96,6 +95,10 @@
                 </form>
             </div>
         </div>
+    </div>
+
+    <div id="notifications">
+        
     </div>
 
     <footer>
