made some stuff, uploaded via bat

--- a/views/user.hbs
+++ b/views/user.hbs
@@ -46,7 +46,8 @@
                 {{#each friends}}
                 <div class="friend">
                     <span class="input-group-text" id="{{this.friendUsername}}"><i class="fas fa-at"></i>
-                        {{this.friendUsername}}</span>
+                        {{this.friendUsername}}<span class=" badge
+                            badge-light">0</span></span>
                 </div>
                 {{/each}}
             </div>
