--- a/views/user.hbs
+++ b/views/user.hbs
@@ -24,73 +24,57 @@
                 <p id="infoLastName"><b>Last Name:</b> {{{user.lastname}}}</p>
                 <p id="infoEmail"><b>Email:</b> {{{user.email}}}</p>
             </div>
-            <div id="form" class="hide">
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Task Name</span>
-                    </div>
-                    <input type="text" class="form-control" id="taskNameInput" placeholder="Task Name"
-                        aria-label="Task Name" aria-describedby="basic-addon1">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Task Description</span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Task Description" aria-label="Task Description"
-                        id="taskDescriptionInput" aria-describedby="basic-addon1">
-                </div>
-                <button type="button" id="submitTask" class="btn btn-outline-primary">Add Task</button>
-            </div>
             <div id="friends" class="border">
                 <h4>Friends</h4>
-                {{#each friends}}
-                <div class="friend">
-                    <span class="input-group-text" id="{{this.friendUsername}}"><i class="fas fa-at"></i>
-                        {{this.friendUsername}} <span class=" badge
+                <div id="allFriends">
+                    {{#each friends}}
+                    <div class="friend">
+                        <span class="input-group-text" id="{{this.friendUsername}}"><i class="fas fa-at"></i>
+                            {{this.friendUsername}} <span class=" badge
                                                         badge-light">0</span><button data-toggle="modal"
-                            data-target="#removeFriendModal" type="button"
-                            class="badge choice removeFriend btn btn-outline-primary right" style="margin:0;"><i
-                                class="fas fa-ban"></i></button></span>
+                                data-target="#removeFriendModal" type="button"
+                                class="badge choice removeFriend btn btn-outline-primary right" style="margin:0;"><i
+                                    class="fas fa-ban"></i></button></span>
+                    </div>
+                    {{/each}}
                 </div>
-                {{/each}}
             </div>
         </div>
-    </div>
-    <div id="chat" class="border">
-        <div id="allMessages">
-        </div>
-        <div class="input-group mb-3 inputAndBtnChatHide">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="far fa-comment"></i></span>
+        <div id="chat" class="border">
+            <div id="allMessages">
             </div>
-            <input type="text" id="Message" class="form-control" id="taskNameInput" placeholder="Message"
-                aria-label="Comment" aria-describedby="basic-addon1">
-            <div class="input-group-prepend">
-                <button type="button" class="input-group-text btn btn-outline-primary" id="addMessage">Send</button>
+            <div class="input-group mb-3 inputAndBtnChatHide">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="far fa-comment"></i></span>
+                </div>
+                <input type="text" id="Message" class="form-control" id="taskNameInput" placeholder="Message"
+                    aria-label="Comment" aria-describedby="basic-addon1">
+                <div class="input-group-prepend">
+                    <button type="button" class="input-group-text btn btn-outline-primary" id="addMessage">Send</button>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="invites" class="border">
-        <h4>Project Invites</h4>
-        {{#each allInvites}}
-        <div id={{this.id}} class="invite border"><b>@{{this.fromUser}}</b> invited you to their project called
-            {{this.projectName}}!<button type="button" class="badge choice accept btn btn-outline-primary"><i
-                    class="fas fa-check fa-2x"></i></button><button type="button"
-                class="badge choice decline btn btn-outline-primary"><i class="fas fa-ban fa-2x"></i></button></div>
-        {{/each}}
-    </div>
-    <div id="friendInvites" class="border">
-        <h4 style="display:inline-block">Friend Invites</h4>
-        <button type="button" class="badge choice addFriend btn btn-outline-primary" data-toggle="modal"
-            data-target="#addUserModal">Add friend</button>
-        {{#each allFriendRequests}}
-        <div id={{this.id}} class="invite border"><b>@{{this.fromUser}}</b> sent a friend request!<button type="button"
-                class="badge choice acceptFriend btn btn-outline-primary"><i
-                    class="fas fa-check fa-2x"></i></button><button type="button"
-                class="badge choice declineFriend btn btn-outline-primary"><i class="fas fa-ban fa-2x"></i></button>
+        <div id="invites" class="border">
+            <h4>Project Invites</h4>
+            {{#each allInvites}}
+            <div id={{this.id}} class="invite border"><b>@{{this.fromUser}}</b> invited you to their project called
+                {{this.projectName}}!<button type="button" class="badge choice accept btn btn-outline-primary"><i
+                        class="fas fa-check fa-2x"></i></button><button type="button"
+                    class="badge choice decline btn btn-outline-primary"><i class="fas fa-ban fa-2x"></i></button></div>
+            {{/each}}
         </div>
-        {{/each}}
-    </div>
+        <div id="friendInvites" class="border">
+            <h4 style="display:inline-block">Friend Invites</h4>
+            <button type="button" class="badge choice addFriend btn btn-outline-primary" data-toggle="modal"
+                data-target="#addUserModal">Add friend</button>
+            {{#each allFriendRequests}}
+            <div id={{this.id}} class="invite border"><b>@{{this.fromUser}}</b> sent a friend request!<button
+                    type="button" class="badge choice acceptFriend btn btn-outline-primary"><i
+                        class="fas fa-check fa-2x"></i></button><button type="button"
+                    class="badge choice declineFriend btn btn-outline-primary"><i class="fas fa-ban fa-2x"></i></button>
+            </div>
+            {{/each}}
+        </div>
     </div>
     <div class="modal fade" id="addUserModal" role="dialog">
         <div class="modal-dialog modal-sm">
@@ -101,16 +85,6 @@
                         <input type="input" class="form-control" id="usernameAddFriend" placeholder="Enter Username">
                     </div>
                     <div class="from-group"><button class="btn btn-primary" id="addFriend">Add Friend</button></div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="removeFriendModal" role="dialog">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <form class="remove">
-                    <div class="from-group"><button class="btn btn-primary" id="removeFriend">Remove friend</button>
-                    </div>
                 </form>
             </div>
         </div>
