--- a/public/css/user.css
+++ b/public/css/user.css
@@ -94,7 +94,7 @@
     margin: 5px auto;
     background: #63BFBF;
     padding: 10px;
-    font-weight: 900;
+    font-weight: 600;
     color: #fff;
     font-family: arial;
     position: relative;
@@ -128,6 +128,7 @@
 
 .message p {
     margin: 0;
+    display: inline;
 }
 
 #allMessages {
