--- a/views/user.hbs
+++ b/views/user.hbs
@@ -23,6 +23,31 @@
                 <p id="infoFirstName"><b>First Name:</b> {{{user.firstname}}}</p>
                 <p id="infoLastName"><b>Last Name:</b> {{{user.lastname}}}</p>
                 <p id="infoEmail"><b>Email:</b> {{{user.email}}}</p>
+                <button type="button" id="editPersonalDetails" class="btn btn-outline-dark">Edit Personal Details</button>
+                <div id="form" class="hide">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">First Name</span>
+                        </div>
+                        <input type="text" class="form-control" id="taskNameInput" placeholder="Task Name"
+                            aria-label="First Name" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Last Name</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Last Name" aria-label="Task Description"
+                            id="taskDescriptionInput" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Email</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Email" aria-label="Task Description"
+                            id="taskDescriptionInput" aria-describedby="basic-addon1">
+                    </div>
+                    <button type="button" id="edit" class="btn btn-outline-primary">Redigera uppgifter</button>
+                </div>
             </div>
             <div id="friends" class="border">
                 <h4>Friends</h4>
