--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
 {{!< default}}
 <main class="container">
     <h1 class="title">The last collaboration tool you will ever use</h1>
-    <video id="basicVideo" controls autoplay>
+    <video id="basicVideo" controls autoplay loop>
         <source src="./public/img/basic.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
@@ -21,7 +21,7 @@
 
     <div class="information">
         <img src="./public/img/message.bmp" alt="Message" class="display">
-        <p>Our tool makes it easy to collaborate on a single project, to work in teams, and have a more transparrent
+        <p>Our tool makes it easy to collaborate on a single project, to work in teams, and have a more transparent
             workflow. This is achived by working with an agile workflow. Out platform has all the tools to
             work in the most efficient way.
         </p>
@@ -29,7 +29,7 @@
     <h2 class="title">Easy collaboration</h2>
     <div class="information">
 
-        <p>Collaboration is easy with <b>Flow.</b> Flow is live, so you wont miss a thing, its fast, so you never hve to
+        <p>Collaboration is easy with <b>Flow.</b> Flow is live, so you wont miss a thing, its fast, so you never have to
             wait, and its intuative, so you can get going as soon as you have <a href="/signup">set up</a> an account
         </p>
         <img src="./public/img/project.bmp" alt="Projects" class="display">
