--- a/public/css/style.css
+++ b/public/css/style.css
@@ -273,6 +273,7 @@ dropdown-item {
 video {
     width: 100%;
     height: 100%;
+    border-radius: 5px;
 }
 
 .title {
@@ -281,6 +282,7 @@ video {
 }
 
 .display {
+    border-radius: 5px;
     width: 50%;
     height: 50%;
 }
