made some stuff, uploaded via bat

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -11,7 +11,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"><i class="fas fa-user-circle"></i></span>
             </div>
-
+            {{!-- sad --}}
             <input type="text" class="form-control" id="firstname" placeholder="First Name" aria-label="First Name"
                 aria-describedby="basic-addon1">
         </div>
