made some stuff, uploaded via bat

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
 {{!< default}}
 <main class="container">
     <h1 class="title">The last collaboration tool you will ever use</h1>
-    <video id="basicVideo" controls autoplay loop>
+    <video id="basicVideo" controls autoplay muted loop>
         <source src="./public/img/basic.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
