--- a/views/user.hbs
+++ b/views/user.hbs
@@ -24,7 +24,7 @@
                 <p id="infoLastName"><b>Last Name:</b> {{{user.lastname}}}</p>
                 <p id="infoEmail"><b>Email:</b> {{{user.email}}}</p>
                 <button type="button" id="editPersonalDetails" class="btn btn-outline-dark">Edit Personal Details</button>
-                <div id="form" class="hide">
+                <div id="userForm" class="hide">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text">First Name</span>
