made some stuff, uploaded via bat

--- a/views/user.hbs
+++ b/views/user.hbs
@@ -29,7 +29,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">First Name</span>
                         </div>
-                        <input type="text" class="form-control" id="taskNameInput" placeholder="Task Name"
+                        <input type="text" class="form-control" id="taskNameInput" placeholder="First Name"
                             aria-label="First Name" aria-describedby="basic-addon1">
                     </div>
                     <div class="input-group mb-3">
