--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,15 @@ main {
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+::-webkit-scrollbar{
+    height: 4px;
+    width: 4px;
+    background: rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb:horizontal{
+    background: #888;
+    border-radius: 10px;
+}
 
 nav>ul {
     padding: 0.3em;
