made some stuff, uploaded via bat

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -14,6 +14,7 @@
 {{/contentFor}}
 <main>
         <button type="button" data-toggle="modal" data-target="#removeProjectModal"class="btn btn-danger deleteProject">Delete Project</button>
+        <button type="button" data-toggle="modal" data-target="#addUserModal"class="btn btn-primary deleteProject">Add User</button>
     <div class="tasks">
         <div id="taskViewHeader" class="taskViewGrid">
             <p class="center">BACKLOG</p>
@@ -58,10 +59,6 @@
     </div>
     <div id="showAddTaskForm"><button type="button" id="showForm" class="btn btn-outline-primary"><i
                 class="fas fa-plus fa-2x"></i></button>
-        <button class="" id="addProject" type="button" class="btn btn-secondary" data-toggle="modal"
-            data-target="#addUserModal">
-            ADD
-        </button>
     </div>
     <div class="infoGrid" id="mainInfo">
 
