made some stuff, uploaded via bat

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,8 +17,7 @@
         class="btn btn-danger deleteProject">Delete Project</button>
     <button type="button" data-toggle="modal" data-target="#addUserModal" class="btn btn-primary deleteProject">Add
         User</button>
-    <button type="button" id="asign"data-toggle="modal" data-target="#asignTaskModal" class="btn btn-primary deleteProject">Asign
-        Task</button>
+
     <div class="tasks">
         <div id="taskViewHeader" class="taskViewGrid">
             <p class="center">BACKLOG</p>
@@ -75,6 +74,9 @@
                 <p id="infoProjectId">Prject ID</p>
                 <i id="edit" class="fas fa-edit fa-2x"></i>
                 <i id="remove" class="fas fa-trash-alt fa-2x right remove"></i>
+                <button type="button" id="asign" data-toggle="modal" data-target="#asignTaskModal"
+                    class="btn btn-primary deleteProject">Asign
+                    Task</button>
             </div>
             <div id="form" class="">
                 <div class="input-group mb-3">
@@ -148,12 +150,7 @@
             <div class="modal-content">
                 <form class="addNew">
                     <div id="asignUsers">
-                    <button class="btn btn-primary asignUser" id="">User</button>
-                    <button class="btn btn-primary asignUser" id="">User</button>
-                    <button class="btn btn-primary asignUser" id="">User</button>
-                    <button class="btn btn-primary asignUser" id="">User</button>
                     </div>
-                    <div class="from-group"><button class="btn btn-success" id="asignTask">Asign task</button></div>
                 </form>
             </div>
         </div>
