--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -169,7 +169,15 @@
     float:right;
     padding:0.5em;
 }
+
 .asignUser{
     margin:5px;
     width:90%;
 }
+
+#calendar {
+    padding: 3em;
+}
+
+
+
