--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -24,36 +24,36 @@
 
     document.addEventListener('DOMContentLoaded', function () {
         var calendarEl = document.getElementById('calendar');
-
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-            plugins: ['dayGrid'],
+        window.calendar = new FullCalendar.Calendar(calendarEl, {
+            plugins: ['dayGrid', 'interaction'],
             header: {
                 left: 'prev,next today',
                 center: 'title',
                 right: "none"
             },
-            defaultView: 'dayGridMonth',
+
             selectable: true,
-            locale: "sv",
+            locale: "en",
             buttonIcons: true, // show the prev/next text
             weekNumbers: true,
             navLinks: false, // can click day/week names to navigate views
             eventStartEditable: true,
-            eventLimit: true, // allow "more" link when too many events
-            eventRender: function (info) {
-                console.log(info)
-                // $(info.el).css("background", "red")
-            },
-            select: function () {
-                console.log("asd")
-                // Display the modal.
-                // You could fill in the start and end fields based on the parameters
-                $('.addEventModal').modal('show');
+            eventLimit: false, // allow "more" link when too many events
+            select: function (e) {
+                console.log(e);
+                $('#estart').val(e.startStr);
+                $('#eend').val(e.endStr);
 
             },
+            eventClick: function (e) {
+                $('#selectedEvent').html(e.event.title);
+                $('#removeEvent').attr('data-target', e.event.id);
+            },
+            events: []
         });
 
         calendar.render();
+        calendar.next();
     });
 
 </script>
@@ -168,27 +168,36 @@
             {{/each}}
         </div>
     </div>
-    <div class="modal fade" id="addUserModal" role="dialog">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <form class="addNew">
-                    <div class="form-group">
-                        <label for="name">Username</label>
-                        <input type="input" class="form-control" id="usernameAdd" placeholder="Enter Username">
-                    </div>
-                    <div class="from-group"><button class="btn btn-primary" id="addUser">Add User</button></div>
-                </form>
-            </div>
+
+</main>
+
+<div class="modal fade" id="addUserModal" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <form class="addNew">
+                <div class="form-group">
+                    <label for="name">Username</label>
+                    <input type="input" class="form-control" id="usernameAdd" placeholder="Enter Username">
+                </div>
+                <div class="from-group"><button class="btn btn-primary" id="addUser">Add User</button></div>
+            </form>
         </div>
     </div>
-    <div class="modal  fade" id="showCalender" role="dialog">
-        <div class="modal-dialog cal-diaglog modal-lg">
-            <div class="modal-calendar modal-content">
-                <div id="calendar"></div>
-                <button type="button" data-toggle="modal" data-target="#addUser" class="btn btn-primary">Add
-                    Event</button>
+</div>
+<div class="modal  fade" id="showCalender" role="dialog">
+    <div class="modal-dialog cal-diaglog modal-lg">
+        <div class="modal-calendar modal-content">
+            <div id="calendar"></div>
+            <div class="form-group ">
+                <label for="estart">Event Start</label><input type="date" class="form-control" id="estart">
+                <label for="eend">Event End</label><input type="date" class="form-control" id="eend">
+                <label for="ename">Event Name</label><input type="text" placeholder="Event Name" class="form-control"
+                    id="ename">
             </div>
-
+            <p>Selected Event:<span id="selectedEvent"></span></p>
+            <button type="button" class="btn btn-primary" id="addEvent">Add event</button>
+            <button type="button" class="btn btn-danger" data-target="" id="removeEvent">Remove selected
+                event</button>
         </div>
     </div>
     <div class="modal fade" id="removeProjectModal" role="dialog">
@@ -216,5 +225,3 @@
             </div>
         </div>
     </div>
-
-</main>
