--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -46,7 +46,11 @@
     border-radius: 2em;
     width: 90%;
     margin: auto;
-    padding: 2em;
+    padding-left: 2em;
+
+    padding-right: 2em;
+
+    padding-bottom: 2em;
 }
 
 .taskItem {
@@ -165,11 +169,6 @@
 #edit:hover{
     color:#63BFBF;
 }
-.deleteProject{
-    float:right;
-    padding:0.5em;
-}
-
 .asignUser{
     margin:5px;
     width:90%;
@@ -179,5 +178,12 @@
     padding: 3em;
 }
 
+.calPadding {
+    padding: 3em;
+}
 
+.topButtons {
+    margin:2em;
+    margin-top: 1em;
+}
 
